added updated code

--- a/Flight_Delay_Prediction.ipynb
+++ b/Flight_Delay_Prediction.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,9 +465,9 @@
    ],
    "source": [
     "# Calculate IQR\n",
-    "Q1 = carrier_delay_df['CRSArrTime'].quantile(0.25)  # 25th percentile\n",
-    "Q3 = carrier_delay_df['CRSArrTime'].quantile(0.75)  # 75th percentile\n",
-    "IQR = Q3 - Q1  # Interquartile Range\n",
+    "Q1 = carrier_delay_df['CRSArrTime'].quantile(0.25)  \n",
+    "Q3 = carrier_delay_df['CRSArrTime'].quantile(0.75)  \n",
+    "IQR = Q3 - Q1  \n",
     "\n",
     "# Define lower and upper bounds\n",
     "lower_bound = Q1 - 1.5 * IQR\n",
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2383,7 @@
     "print('Precision: ', round(precision_knn, 2))\n",
     "print('Recall: ', round(recall_knn, 2))\n",
     "print('F1 Score: ', round(f1score_knn, 2))\n",
-    "print('Testing Accuracy: ', round(accscore_knn-0.12, 2))"
+    "print('Testing Accuracy: ', round(accscore_knn, 2))"
    ]
   },
   {
@@ -2522,7 +2522,7 @@
    ],
    "source": [
     "models = ['Logistic Regression', 'Tuned Logistic Regression']\n",
-    "accuracies = [accscore_log, accuracy]  # Ensure accuracy variables exist and are properly named\n",
+    "accuracies = [accscore_log, accuracy]  \n",
     "\n",
     "# Plot the accuracy comparison\n",
     "import matplotlib.pyplot as plt\n",
@@ -2532,7 +2532,7 @@
     "plt.xlabel('Models')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Accuracy of the Models')\n",
-    "plt.ylim(0, 1)  # Set y-axis range to [0, 1] for clarity\n",
+    "plt.ylim(0, 1)\n",
     "plt.show()"
    ]
   }
