added updated py code

--- a/Flight_Delay_Prediction.ipynb
+++ b/Flight_Delay_Prediction.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sushe\\AppData\\Local\\Temp\\ipykernel_23172\\2359800090.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\sushe\\AppData\\Local\\Temp\\ipykernel_14360\\4183316191.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "((387640, 553), (96911, 553), (387640,), (96911,))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2449,6 +2449,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error:  0.18153769953875204\n",
+      "R2 Score:  -0.22180337376131476\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mean squared error of the model\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "mse = mean_squared_error(y_test, y_pred_tuned)\n",
+    "print('Mean Squared Error: ', mse)\n",
+    "#rsquared score of the model\n",
+    "from sklearn.metrics import r2_score\n",
+    "r2 = r2_score(y_test, y_pred_tuned)\n",
+    "print('R2 Score: ', r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -2478,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2496,7 +2521,7 @@
     "#plot confusion matrix for the test data of the tuned logistic regression model\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "conf_matrix = confusion_matrix(y_train, y_train_pred_KNN)\n",
+    "conf_matrix = confusion_matrix(y_train, y_train_pred_logistic)\n",
     "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
@@ -2522,7 +2547,7 @@
    ],
    "source": [
     "models = ['Logistic Regression', 'Tuned Logistic Regression']\n",
-    "accuracies = [accscore_log, accuracy]  \n",
+    "accuracies = [accscore_log, accuracy] \n",
     "\n",
     "# Plot the accuracy comparison\n",
     "import matplotlib.pyplot as plt\n",
@@ -2532,7 +2557,7 @@
     "plt.xlabel('Models')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Accuracy of the Models')\n",
-    "plt.ylim(0, 1)\n",
+    "plt.ylim(0, 1)  \n",
     "plt.show()"
    ]
   }
